All templates were transferred to the render function

--- a/a4_main/templates/a4_main/displaying_sorting_results_template.html
+++ b/a4_main/templates/a4_main/displaying_sorting_results_template.html
@@ -7,10 +7,10 @@
                   maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible"
           content="ie=edge">
-    <title>string input</title>
+    <title>displaying sorting results</title>
 </head>
 <body>
-  <h1>First page</h1>
-  <p>string input</p>
+  <h1>Third page</h1>
+  <p>displaying sorting results</p>
 </body>
 </html>
