--- a/a4_main/templates/a4_main/explanation_meaning_words_template.html
+++ b/a4_main/templates/a4_main/explanation_meaning_words_template.html
@@ -7,10 +7,10 @@
                   maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible"
           content="ie=edge">
-    <title>string input</title>
+    <title>explanation meaning words</title>
 </head>
 <body>
-  <h1>First page</h1>
-  <p>string input</p>
+  <h1>Fourth page</h1>
+  <p>explanation meaning words</p>
 </body>
 </html>
