Create base.html file

--- a/a4_main/templates/a4_main/base.html
+++ b/a4_main/templates/a4_main/base.html
@@ -7,10 +7,12 @@
                   maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible"
           content="ie=edge">
-    <title>displaying sorting results</title>
+    <title>entry</title>
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-  <h1>Third page</h1>
-  <p>displaying sorting results</p>
+  <h1>First page</h1>
+  <p>Chapter entry</p>
 </body>
 </html>
