--- a/a4_main/templates/a4_main/choice.html
+++ b/a4_main/templates/a4_main/choice.html
@@ -7,10 +7,12 @@
                   maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible"
           content="ie=edge">
-    <title>choice word length</title>
+    <title>choice</title>
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 </head>
 <body>
   <h1>Second page</h1>
-  <p>choice word length</p>
+  <p>Choice word length</p>
 </body>
 </html>
