--- a/a4_main/templates/a4_main/explanation.html
+++ b/a4_main/templates/a4_main/explanation.html
@@ -7,10 +7,12 @@
                   maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible"
           content="ie=edge">
-    <title>string input</title>
+    <title>explanation</title>
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-  <h1>First page</h1>
-  <p>string input</p>
+  <h1>Fourth page</h1>
+  <p>explanation meaning words</p>
 </body>
 </html>
