--- a/a4_main/templates/a4_main/base.html
+++ b/a4_main/templates/a4_main/base.html
@@ -7,12 +7,26 @@
                   maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible"
           content="ie=edge">
-    <title>entry</title>
+    <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-  <h1>First page</h1>
-  <p>Chapter entry</p>
+    <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
+        <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img">
+                <title>Bootstrap</title>
+            </svg>
+            <span class="fs-4">AnyName4</span>
+        </a>
+
+        <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+            <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'input' %}">input</a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'output' %}">output</a>
+        </nav>
+    </div>
+    <div class="container">
+        {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
